2018-1-15
=========
- Added support for PS5, FR6
- both CatFR* and catFR* are acceptible names for catFR experiments (though not PS*_catFR*)
- Added parsers.dtypes module; all experiments with the same name should now create events with the same fields


Outstanding Issues
------------------
- mstime field in events produced by HostPCLogParser do not use a unified clock


2018-1-16
=========
* Added brainshift-corrected MNI coordinates to localization
* Fixed bug in which event pipeline would crash if electrode config file didn't have a name
* Added call to brain visualization API at end of localization pipeline
* Updates to PS4 experiment suite:
    - all_events.json now created for PS4 experiments
    - PS4_* now their own set of experiments
    - anode_label,cathode_label,anode_num,cathode_num,amplitude fields moved from top level of PS4 events to stim_params

2017-12-5
=========
* Added some data quality checks to FR,catFR,PAL events
  - functions defined in quality module
  - parser registers the functions it wants to run in the class attribute _TESTS
  - error messages added to self.pipeline.importer.warnings in EventCreationTask
  - Importer now has warnings attribute, with corresponding changes to Importer.display() and ImporterCollection.display()
* Parsers now crash if they are missing annotation files

2017-10-30
==========
Added new task, math parsers for UnityEPL compatibility


2017-10-20
==========
submission.convenience supports neurorad pipeline

2017-08-24
==========
Added Unicode support where it was missing


2016-10-12
==========

- Some subjects were missing channels of EEG data. This has been resolved.
- Stimulation voltage in PS was sometimes reported in uA, and sometimes in mA.
  Now they will all be in uA
- PS events were occasionally out of order