@@ -1,3 +1,10 @@
+2018-3-6
+========
+- Refactored event_creation and bundled it into a conda package
+
+
+
+
 2018-1-15
 =========
 - Added support for PS5, FR6
